# ink_parser

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  tests.rs
stories/: basic_story.ink  spaces_before_divert.ink  story_with_variables.ink  too_many_blank_lines.ink  two_knots.ink  two_knots_with_choices.ink
