[package]
name = "ink_parser"
version = "0.1.0"
authors = ["MattWoelk <matt.woelk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4"
pretty_assertions = "0.7"
maplit = "1.0"

[dev-dependencies]
color-backtrace = "0.5.1"